cc_test(
    name = "url_search_params",
    srcs = ["url_search_params.cpp"],
    deps = [
        "//:ada",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "ada_c",
    srcs = ["ada_c.cpp"],
    deps = [
        "//:ada",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
