add_executable(adaparse adaparse.cpp)
target_link_libraries(adaparse PRIVATE ada)
target_include_directories(adaparse PUBLIC "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>")

add_executable(adaparseB adaparseB.cpp)
target_link_libraries(adaparseB PRIVATE ada)
target_include_directories(adaparseB PUBLIC "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>")

add_executable(adaparseC adaparseC.cpp line_iterator.h)
target_link_libraries(adaparseC PRIVATE ada)
target_include_directories(adaparseC PUBLIC "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>")

add_executable(adaparseD adaparseD.cpp)
target_link_libraries(adaparseD PRIVATE ada)
target_include_directories(adaparseD PUBLIC "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>")

include(${PROJECT_SOURCE_DIR}/cmake/import.cmake)
import_dependency(cxxopts jarro2783/cxxopts eb78730)
add_dependency(cxxopts)
import_dependency(fmt fmtlib/fmt a337011)
add_dependency(fmt)
target_link_libraries(adaparse PRIVATE cxxopts::cxxopts fmt::fmt)
target_link_libraries(adaparseB PRIVATE cxxopts::cxxopts fmt::fmt)
target_link_libraries(adaparseC PRIVATE cxxopts::cxxopts fmt::fmt)
target_link_libraries(adaparseD PRIVATE cxxopts::cxxopts fmt::fmt)